--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -48,8 +48,8 @@ jobs:
 
           # Most Used Languages
           plugin_languages: yes
-          plugin_languages_ignored: html, css, dockerfile, makefile
-          plugin_languages_limit: 4
+          #plugin_languages_ignored: html, css, dockerfile, makefile
+          plugin_languages_limit: 0
           plugin_languages_sections: most-used
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
