--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,10 +19,17 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           user: ${{ github.repository_owner }}
 
-          # --- 1. AESTHETICS (Night Owl Theme) ---
+          # --- 1. ACCESS ORGANIZATIONS ---
+          # This line tells the bot to look at repos you own, collaborate on, OR belong to as an org member
+          repositories_affiliations: owner, collaborator, organization_member
+          
+          # --- 2. AESTHETICS (Night Owl Theme) ---
           config_theme: nightowl
           config_timezone: Asia/Kolkata
           config_padding: 10, 10
+
+          # Force the order so your Custom Name (Introduction) appears FIRST
+          config_order: introduction, languages, lines, activity, community, repositories, metadata
           
           # Custom CSS for the "Glass" Look
           extras_css: |
@@ -33,25 +40,29 @@ jobs:
               background-color: #011627; 
             }
 
-          # --- 2. FORCE CUSTOM NAME (The Fix) ---
-          # This replaces the default "ABC" with "XYZ"
+          # --- 3. FORCE CUSTOM NAME  ---
           plugin_introduction: yes
           plugin_introduction_title: "Inkesk-Dozing"  # <--- TYPE YOUR ALIAS HERE
           plugin_introduction_text: "Extending Via OSKA | Working on eOzka" # Optional subtitle
 
-          # --- 3. DATA SECTIONS ---
-          base: header, activity, community, repositories, metadata
+          # --- 4. DATA SECTIONS ---
+          base: activity, community, repositories, metadata
           commits_authoring: yes
-          plugin_lines: yes
-          plugin_lines_history_limit: 1
-          plugin_lines_repositories_limit: 4
 
+          # --- 5. LINES OF CODE (SCAN EVERYTHING) ---
+          plugin_lines: yes
+          plugin_lines_history_limit: 180
+          plugin_lines_sections: base
+          plugin_lines_repositories_limit: 0
+
+          # --- 6. LANGUAGES (ALL INCLUSIVE) ---
           # Most Used Languages
           plugin_languages: yes
           # Enable the Circular Graph
           plugin_languages_indepth: yes
           # Increase timeout because it analyzes deeper (crucial for Indepth)
-          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout: 120
+          plugin_languages_recent_categories: markup, programming, data, prose
           #plugin_languages_ignored: html, css, dockerfile, makefile
           plugin_languages_limit: 0
           plugin_languages_sections: most-used
@@ -59,3 +70,18 @@ jobs:
           plugin_languages_details: lines, percentage
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
+
+# JOB 2: Delete Old Logs (Runs after Job 1)
+  cleanup:
+    runs-on: ubuntu-latest
+    needs: github-metrics # Waits for metrics to finish first
+    permissions:
+      actions: write      # Required to delete logs
+    steps:
+      - name: Delete old workflow runs
+        uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          repository: ${{ github.repository }}
+          retain_days: 0      # Delete everything older than...
+          keep_minimum_runs: 3 # always keep the last 3 runs (for safety)
