--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,7 +26,7 @@ jobs:
           # --- 2. AESTHETICS (Night Owl Theme) ---
           config_theme: nightowl
           config_timezone: Asia/Kolkata
-          config_padding: 10, 10
+          config_padding: 0, 10%
 
           # Force the order so your Custom Name (Introduction) appears FIRST
           config_order: introduction, languages, lines, activity, community, repositories, metadata
@@ -34,6 +34,15 @@ jobs:
           # Custom CSS for the "Glass" Look
           extras_css: |
             svg { 
+              /* 1. Size & Box Model */
+              box-sizing: border-box;
+              width: 100%;  /* Makes it fill the available space */
+              max-width: 800px; /* Optional: Stops it from getting too huge */
+              
+              /* 2. Internal Spacing (Fixes congestion) */
+              padding: 25px; /* Adds breathing room inside the border */
+              
+              /* 3. The Border Style */
               border-radius: 12px; 
               border: 1px solid #7e57c2; 
               box-shadow: 0 4px 20px rgba(126, 87, 194, 0.25); 
@@ -59,9 +68,9 @@ jobs:
           # Most Used Languages
           plugin_languages: yes
           # Enable the Circular Graph
-          #plugin_languages_indepth: yes
+          plugin_languages_indepth: yes
           # Increase timeout because it analyzes deeper (crucial for Indepth)
-          plugin_languages_analysis_timeout: 120
+          plugin_languages_analysis_timeout: 600
           plugin_languages_recent_categories: markup, programming, data, prose
           #plugin_languages_ignored: html, css, dockerfile, makefile
           plugin_languages_limit: 0
