--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,6 +1,6 @@
 name: Metrics
 on:
-  # 1. Update automatically every hour
+  # 1. Update automatically every day at midnight
   schedule: [{cron: "0 * * * *"}]
   # 2. Allow you to run it manually from the Actions tab for testing
   workflow_dispatch:
@@ -22,25 +22,24 @@ jobs:
           # --- 1. ACCESS ORGANIZATIONS ---
           # This line tells the bot to look at repos you own, collaborate on, OR belong to as an org member
           repositories_affiliations: owner, collaborator, organization_member
-          
+
           # --- 2. AESTHETICS (Night Owl Theme) ---
           config_theme: nightowl
           config_timezone: Asia/Kolkata
-          config_padding: 0, 50
-
+          config_padding: 10, 10
           # Force the order so your Custom Name (Introduction) appears FIRST
           config_order: introduction, languages, lines, activity, community, repositories, metadata
           
           # Custom CSS for the "Glass" Look
           extras_css: |
-            svg { 
-              border-radius: 12px; 
-              border: 1px solid #7e57c2; 
-              box-shadow: 0 4px 20px rgba(126, 87, 194, 0.25); 
-              background-color: #011627; 
+            svg {
+              border-radius: 12px;
+              border: 1px solid #7e57c2;
+              box-shadow: 0 4px 20px rgba(126, 87, 194, 0.25);
+              background-color: #011627;
             }
 
-          # --- 3. FORCE CUSTOM NAME  ---
+          # --- 3. FORCE CUSTOM NAME ---
           plugin_introduction: yes
           plugin_introduction_title: "Inkesk-Dozing"  # <--- TYPE YOUR ALIAS HERE
           plugin_introduction_text: "Extending Via OSKA | Working on eOzka" # Optional subtitle
@@ -59,11 +58,11 @@ jobs:
           # Most Used Languages
           plugin_languages: yes
           # Enable the Circular Graph
-          plugin_languages_indepth: no
+          plugin_languages_indepth: yes
           # Increase timeout because it analyzes deeper (crucial for Indepth)
           plugin_languages_analysis_timeout: 600
           plugin_languages_recent_categories: markup, programming, data, prose
-          #plugin_languages_ignored: html, css, dockerfile, makefile
+          # plugin_languages_ignored: html, css, dockerfile, makefile
           plugin_languages_limit: 0
           plugin_languages_sections: most-used
           # Clean up the text details to make it look neater
@@ -71,7 +70,7 @@ jobs:
           plugin_languages_colors: github
           plugin_languages_threshold: 0%
 
-# JOB 2: Delete Old Logs (Runs after Job 1)
+  # JOB 2: Delete Old Logs (Runs after Job 1)
   cleanup:
     runs-on: ubuntu-latest
     needs: github-metrics # Waits for metrics to finish first
